--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.16",
     "yup": "^1.7.1"
   },
